--- a/.travis.yml
+++ b/.travis.yml
@@ -35,5 +35,6 @@ script:
 
   # Run the role/playbook with ansible-playbook.
   - ls 
-  - cd tests && install-roles.sh
-  - cd tests && test.sh
+  - cd tests 
+  - install-roles.sh
+  - test.sh
