--- a/.travis.yml
+++ b/.travis.yml
@@ -5,20 +5,21 @@ dist: xenial
 language: python
 python:
   - "2.7"
-#  - "3.5"
+  - "3.5"
 
 # Doc: https://docs.travis-ci.com/user/customizing-the-build#Build-Matrix
 # https://docs.travis-ci.com/user/common-build-problems/
 env:
-#  - ANSIBLE_VERSION=latest
-#  - ANSIBLE_VERSION=2.4.3.0
+  - ANSIBLE_VERSION=latest
+  - ANSIBLE_VERSION=2.4.3.0
   - ANSIBLE_VERSION=2.4.6.0
-#  - ANSIBLE_VERSION=2.5.8
-#  - ANSIBLE_VERSION=2.6.0
+  - ANSIBLE_VERSION=2.5.8
+  - ANSIBLE_VERSION=2.6.0
 
 branches:
   only:
     - master
+    - travis
 
 # before_install:
 #   - sudo apt-get update -qq
@@ -33,6 +34,7 @@ script:
   - find . -name "*.yml" | xargs ansible-lint
 
   # Run the role/playbook with ansible-playbook.
-  - ls 
-  - cd tests; ./install-roles.sh
-  - cd tests; ./test.sh
+  # Requires cloud environment variables set in Travis
+  - cd tests
+  - ./install_roles.sh
+  - ./test.sh
