--- a/tasks/token.yml
+++ b/tasks/token.yml
@@ -15,7 +15,7 @@
     IAM_AUTH_URL: "https://iam.{{ PROJECT_NAME }}.otc.t-systems.com/v3"
     AUTH_URL_ELB: "https://elb.{{ PROJECT_NAME }}.otc.t-systems.com/v1.0"
     AUTH_URL_ECS_CLOUD: "https://ecs.{{ PROJECT_NAME }}.otc.t-systems.com/v1"
-    AUTH_URL_RDS: "https://rds.{{ PROJECT_NAME }}.otc.t-systems.com/rds/v1"
+    AUTH_URL_RDS: "https://rds.{{ PROJECT_NAME }}.otc.t-systems.com"
     AUTH_URL_CTS: "https://cts.{{ PROJECT_NAME }}.otc.t-systems.com/v2.0"
 
 - name: Request token from AUTH API
