--- a/.travis.yml
+++ b/.travis.yml
@@ -11,13 +11,12 @@ python:
 env:
   - ANSIBLE_VERSION=latest
   - ANSIBLE_VERSION=2.4.3.0
-  - ANSIBLE_VERSION=2.4.6.0
-  - ANSIBLE_VERSION=2.5.8
   - ANSIBLE_VERSION=2.6.0
 
 branches:
   only:
     - master
+    - dev
 
 install:
   # Install Ansible.
